hmmm will need to look into the spacing issue

--- a/css/oats.css
+++ b/css/oats.css
@@ -75,5 +75,5 @@
    text-align: center;
    font-size: 24px;
    font-weight: bold;
-   color: #FFF;
+   color: #D5FFFF;
  }
